<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/itemIndex"
        android:enabled="true"
        android:title="@string/itemLocaux"
        android:icon="@drawable/local"
        />

    <item
        android:id="@+id/itemMaps"
        android:enabled="true"
        android:icon="@drawable/map"
        android:title="@string/itemMaps"
        />

    <item
        android:id="@+id/itemAlert"
        android:enabled="true"
        android:title="@string/itemAlert"
        android:icon="@drawable/alert"
        />

    <item
        android:id="@+id/itemParametre"
        android:enabled="true"
        android:title="@string/itemParametre"
        android:icon="@drawable/settings"
        />




</menu>