<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ModifierLoginFragment"
    android:padding="20dp">


    <TextView
        android:id="@+id/textError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textLoginmodif"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/colorRedError"/>

    <TextView
        android:id="@+id/textLoginmodif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_alignTop="@id/editLoginmodif"
        android:layout_alignBottom="@id/editLoginmodif"
        android:textColor="@color/colorFullBlack"
        />

    <EditText
        android:id="@+id/editLoginmodif"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textPasswordmodif"
        android:autofillHints="@string/modifLoginHint"
        android:layout_toEndOf="@+id/textLoginmodif"
        android:layout_alignStart="@+id/editPasswordmodif"
        android:hint="@string/loginHint"
        />

    <TextView
        android:id="@+id/textPasswordmodif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        android:textSize="20sp"
        android:layout_alignTop="@+id/editPasswordmodif"
        android:layout_alignBottom="@id/editPasswordmodif"
        android:gravity="center"
        android:textColor="@color/colorFullBlack"
        />

    <EditText
        android:id="@+id/editPasswordmodif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textPasswordmodif"
        android:layout_marginStart="10dp"
        android:inputType="textPassword"
        android:layout_above="@id/editPasswordmodif2"
        android:hint="@string/modifPasswordHint"
        android:autofillHints="@string/passwordHint" />

    <TextView
        android:id="@+id/textPasswordmodif2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        android:textSize="20sp"
        android:layout_alignTop="@+id/editPasswordmodif2"
        android:layout_alignBottom="@id/editPasswordmodif2"
        android:gravity="center"
        android:textColor="@color/colorFullBlack"
        />

    <EditText
        android:id="@+id/editPasswordmodif2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textPasswordmodif"
        android:layout_marginStart="10dp"
        android:inputType="textPassword"
        android:layout_above="@id/buttonConfirmer"
        android:hint="@string/modifPasswordHint2"
        android:autofillHints="@string/passwordHint" />

    <Button
        android:id="@+id/buttonConfirmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/buttonModifer"
        android:textColor="@color/colorFullWhite"
        android:background="@color/colorYellowGold"/>

</RelativeLayout>