<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ParametreFragment">

    <Button
        android:id="@+id/bGenererComptes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFullBlack"
        android:textColor="@color/colorYellowGold"
        android:text="@string/bGenererCompte"
        android:layout_above="@+id/bDeconnection"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemParametre"
        android:textSize="35sp"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/bDeconnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deconnection"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/colorFullBlack"
        android:textColor="@color/colorYellowGold"
        android:layout_marginTop="1dp"/>

</RelativeLayout>