<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ConnextionActivity"
    android:padding="20dp"
    android:background="@color/colorFullWhite">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="270dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logolilbro"
        android:src="@mipmap/logo_lil_bro"
        android:paddingTop="50dp" />









    <EditText
        android:id="@+id/editLogin"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editPassword"
        android:autofillHints="@string/loginHint"
        android:layout_alignStart="@+id/editPassword"
        android:hint="@string/loginHint"
        android:layout_marginBottom="10dp"/>




    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:inputType="textPassword"
        android:layout_above="@id/buttonConnexion"
        android:hint="@string/passwordHint"
        android:autofillHints="@string/passwordHint"
        />




    <Button
        android:id="@+id/buttonConnexion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonConnexion"
        android:textColor="@color/colorFullWhite"
        android:background="@color/colorYellowGold"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        />


</RelativeLayout>