<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >



    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="@color/colorFullBlack"
        android:text="@string/labelLocal"
        android:textSize="15sp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textNomLoc"
        android:textColor="@color/colorFullBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/text1"
        android:textSize="15sp"
        android:layout_alignTop="@id/text1"
        android:layout_alignBottom="@id/text1"
        android:gravity="center"
        android:layout_marginStart="3dp"
        />





    <TextView
        android:id="@+id/text2"
        android:textColor="@color/colorFullBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:text="@string/labelUser"
        android:textSize="15sp"
        android:layout_alignStart="@id/text1"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textUser"
        android:textColor="@color/colorFullBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/text2"
        android:textSize="15sp"
        android:layout_alignTop="@id/text2"
        android:layout_alignBottom="@id/text2"
        android:gravity="center"
        android:layout_marginStart="3dp"
        />






    <TextView
        android:id="@+id/text3"
        android:textColor="@color/colorFullBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:text="@string/labelDate"
        android:textSize="15sp"
        android:layout_alignStart="@id/text1"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textDate"
        android:textColor="@color/colorFullBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/text3"
        android:textSize="15sp"
        android:layout_alignTop="@id/text3"
        android:layout_alignBottom="@id/text3"
        android:gravity="center"
        android:layout_marginStart="3dp"
        />







    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="1dp"
        android:layout_below="@id/text3"
        android:background="@color/colorYellowGold"/>

</RelativeLayout>